--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-HTML
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,40 +15,46 @@ HTML
             <li><a href="#rihanna">Rihanna</a></li>
         </ul>
     </nav>
-    <h1>Artist Discography</h1>
-    <div class="artists">
-        <div class="artist" id="beyonce">
-            <h2>Beyoncé</h2>
-            <ul>
-                <li><a href="beyonce_dangerously.html">Dangerously in Love (2003)</a></li>
-                <li><a href="beyonce_bday.html">B'Day (2006)</a></li>
-                <li><a href="beyonce_sashafierce.html">I Am... Sasha Fierce (2008)</a></li>
-            </ul>
-        </div>
-        <div class="artist" id="taylorswift">
-            <h2>Taylor Swift</h2>
-            <ul>
-                <li><a href="taylorswift_debut.html">Taylor Swift (2006)</a></li>
-                <li><a href="taylorswift_fearless.html">Fearless (2008)</a></li>
-                <li><a href="taylorswift_speaknow.html">Speak Now (2010)</a></li>
-            </ul>
-        </div>
-        <div class="artist" id="halsey">
-            <h2>Halsey</h2>
-            <ul>
-                <li><a href="halsey_badlands.html">Badlands (2015)</a></li>
-                <li><a href="halsey_hopeless.html">Hopeless Fountain Kingdom (2017)</a></li>
-                <li><a href="halsey_manic.html">Manic (2020)</a></li>
-            </ul>
-        </div>
-        <div class="artist" id="rihanna">
-            <h2>Rihanna</h2>
-            <ul>
-                <li><a href="rihanna_musicoftheson.html">Music of the Sun (2005)</a></li>
-                <li><a href="rihanna_girllikeme.html">A Girl Like Me (2006)</a></li>
-                <li><a href="rihanna_goodgirlgonebad.html">Good Girl Gone Bad (2007)</a></li>
-            </ul>
-        </div>
-    </div>
+
+    <section class="artist" id="beyonce">
+        <img src="images/beyonce.jpg" alt="Beyoncé">
+        <h2>Beyoncé</h2>
+        <ul>
+            <li><a href="beyonce_dangerously.html">Dangerously in Love (2003)</a></li>
+            <li><a href="beyonce_bday.html">B'Day (2006)</a></li>
+            <li><a href="beyonce_sashafierce.html">I Am... Sasha Fierce (2008)</a></li>
+        </ul>
+    </section>
+
+    <section class="artist" id="taylorswift">
+        <img src="images/taylorswift.jpg" alt="Taylor Swift">
+        <h2>Taylor Swift</h2>
+        <ul>
+            <li><a href="taylorswift_debut.html">Taylor Swift (2006)</a></li>
+            <li><a href="taylorswift_fearless.html">Fearless (2008)</a></li>
+            <li><a href="taylorswift_speaknow.html">Speak Now (2010)</a></li>
+        </ul>
+    </section>
+
+    <section class="artist" id="halsey">
+        <img src="images/halsey.jpg" alt="Halsey">
+        <h2>Halsey</h2>
+        <ul>
+            <li><a href="halsey_badlands.html">Badlands (2015)</a></li>
+            <li><a href="halsey_hopeless.html">Hopeless Fountain Kingdom (2017)</a></li>
+            <li><a href="halsey_manic.html">Manic (2020)</a></li>
+        </ul>
+    </section>
+
+    <section class="artist" id="rihanna">
+        <img src="images/rihanna.jpg" alt="Rihanna">
+        <h2>Rihanna</h2>
+        <ul>
+            <li><a href="rihanna_musicoftheson.html">Music of the Sun (2005)</a></li>
+            <li><a href="rihanna_girllikeme.html">A Girl Like Me (2006)</a></li>
+            <li><a href="rihanna_goodgirlgonebad.html">Good Girl Gone Bad (2007)</a></li>
+        </ul>
+    </section>
+
 </body>
 </html>
