--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
 
     <section class="artist" id="beyonce">
-        <img src="images/beyonce.jpg" alt="Beyoncé">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpeople.com%2Fbeyonce-rocks-asymmetrical-cut-she-always-wanted-for-shoot-8602845&psig=AOvVaw21hDQsIL4OyKLb6L9nFESN&ust=1710957984538000&source=images&cd=vfe&opi=89978449&ved=0CBYQjRxqFwoTCJiM56j1gIUDFQAAAAAdAAAAABAQ" alt="Beyoncé">
         <h2>Beyoncé</h2>
         <ul>
             <li><a href="beyonce_dangerously.html">Dangerously in Love (2003)</a></li>
@@ -27,7 +27,7 @@
     </section>
 
     <section class="artist" id="taylorswift">
-        <img src="images/taylorswift.jpg" alt="Taylor Swift">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fvariety.com%2F2023%2Fmusic%2Fnews%2Ftaylor-swift-unreleased-new-songs-eras-tour-1235556815%2F&psig=AOvVaw08Rd45ZGQ7IEU3F8YL70WM&ust=1710958081696000&source=images&cd=vfe&opi=89978449&ved=0CBYQjRxqFwoTCKDwmdf1gIUDFQAAAAAdAAAAABAE" alt="Taylor Swift">
         <h2>Taylor Swift</h2>
         <ul>
             <li><a href="taylorswift_debut.html">Taylor Swift (2006)</a></li>
@@ -37,7 +37,7 @@
     </section>
 
     <section class="artist" id="halsey">
-        <img src="images/halsey.jpg" alt="Halsey">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.thefactsite.com%2Fhalsey-facts%2F&psig=AOvVaw2rFDepGBRO6nwciqkybzcm&ust=1710958122032000&source=images&cd=vfe&opi=89978449&ved=0CBYQjRxqFwoTCPDxuOr1gIUDFQAAAAAdAAAAABAE" alt="Halsey">
         <h2>Halsey</h2>
         <ul>
             <li><a href="halsey_badlands.html">Badlands (2015)</a></li>
@@ -47,7 +47,7 @@
     </section>
 
     <section class="artist" id="rihanna">
-        <img src="images/rihanna.jpg" alt="Rihanna">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fvariety.com%2F2023%2Fmusic%2Fnews%2Frihanna-new-album-release-this-year-1235524052%2F&psig=AOvVaw1ExpUnX5_1oi0miWcaZ1GM&ust=1710958150636000&source=images&cd=vfe&opi=89978449&ved=0CBYQjRxqFwoTCLDupPj1gIUDFQAAAAAdAAAAABAE" alt="Rihanna">
         <h2>Rihanna</h2>
         <ul>
             <li><a href="rihanna_musicoftheson.html">Music of the Sun (2005)</a></li>
