--- a/index.html
+++ b/index.html
@@ -17,43 +17,59 @@
     </nav>
 
     <section class="artist" id="beyonce">
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpeople.com%2Fbeyonce-rocks-asymmetrical-cut-she-always-wanted-for-shoot-8602845&psig=AOvVaw21hDQsIL4OyKLb6L9nFESN&ust=1710957984538000&source=images&cd=vfe&opi=89978449&ved=0CBYQjRxqFwoTCJiM56j1gIUDFQAAAAAdAAAAABAQ" alt="Beyoncé">
-        <h2>Beyoncé</h2>
-        <ul>
-            <li><a href="beyonce_dangerously.html">Dangerously in Love (2003)</a></li>
-            <li><a href="beyonce_bday.html">B'Day (2006)</a></li>
-            <li><a href="beyonce_sashafierce.html">I Am... Sasha Fierce (2008)</a></li>
-        </ul>
+        <div class="artist-info">
+            <h2>Beyoncé</h2>
+            <ul>
+                <li><a href="beyonce_dangerously.html">Dangerously in Love (2003)</a></li>
+                <li><a href="beyonce_bday.html">B'Day (2006)</a></li>
+                <li><a href="beyonce_sashafierce.html">I Am... Sasha Fierce (2008)</a></li>
+            </ul>
+        </div>
+        <div class="artist-image">
+            <img src="https://assets.vogue.in/photos/6465dc1e13d0fd2111a35fdc/2:3/w_2560%2Cc_limit/GettyImages-1458274580-3.jpg" alt="Beyoncé">
+        </div>
     </section>
 
     <section class="artist" id="taylorswift">
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fvariety.com%2F2023%2Fmusic%2Fnews%2Ftaylor-swift-unreleased-new-songs-eras-tour-1235556815%2F&psig=AOvVaw08Rd45ZGQ7IEU3F8YL70WM&ust=1710958081696000&source=images&cd=vfe&opi=89978449&ved=0CBYQjRxqFwoTCKDwmdf1gIUDFQAAAAAdAAAAABAE" alt="Taylor Swift">
-        <h2>Taylor Swift</h2>
-        <ul>
-            <li><a href="taylorswift_debut.html">Taylor Swift (2006)</a></li>
-            <li><a href="taylorswift_fearless.html">Fearless (2008)</a></li>
-            <li><a href="taylorswift_speaknow.html">Speak Now (2010)</a></li>
-        </ul>
+        <div class="artist-info">
+            <h2>Taylor Swift</h2>
+            <ul>
+                <li><a href="taylorswift_debut.html">Taylor Swift (2006)</a></li>
+                <li><a href="taylorswift_fearless.html">Fearless (2008)</a></li>
+                <li><a href="taylorswift_speaknow.html">Speak Now (2010)</a></li>
+            </ul>
+        </div>
+        <div class="artist-image">
+            <img src="https://m.media-amazon.com/images/M/MV5BZGM0YjhkZmEtNGYxYy00OTk0LThlNDgtNGQzM2YwNjU0NDQzXkEyXkFqcGdeQXVyMTU3ODQxNDYz._V1_.jpg" alt="Taylor Swift">
+        </div>
     </section>
 
     <section class="artist" id="halsey">
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.thefactsite.com%2Fhalsey-facts%2F&psig=AOvVaw2rFDepGBRO6nwciqkybzcm&ust=1710958122032000&source=images&cd=vfe&opi=89978449&ved=0CBYQjRxqFwoTCPDxuOr1gIUDFQAAAAAdAAAAABAE" alt="Halsey">
-        <h2>Halsey</h2>
-        <ul>
-            <li><a href="halsey_badlands.html">Badlands (2015)</a></li>
-            <li><a href="halsey_hopeless.html">Hopeless Fountain Kingdom (2017)</a></li>
-            <li><a href="halsey_manic.html">Manic (2020)</a></li>
-        </ul>
+        <div class="artist-info">
+            <h2>Halsey</h2>
+            <ul>
+                <li><a href="halsey_badlands.html">Badlands (2015)</a></li>
+                <li><a href="halsey_hopeless.html">Hopeless Fountain Kingdom (2017)</a></li>
+                <li><a href="halsey_manic.html">Manic (2020)</a></li>
+            </ul>
+        </div>
+        <div class="artist-image">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Halsey_September_2019.jpg/800px-Halsey_September_2019.jpg" alt="Halsey">
+        </div>
     </section>
 
     <section class="artist" id="rihanna">
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fvariety.com%2F2023%2Fmusic%2Fnews%2Frihanna-new-album-release-this-year-1235524052%2F&psig=AOvVaw1ExpUnX5_1oi0miWcaZ1GM&ust=1710958150636000&source=images&cd=vfe&opi=89978449&ved=0CBYQjRxqFwoTCLDupPj1gIUDFQAAAAAdAAAAABAE" alt="Rihanna">
-        <h2>Rihanna</h2>
-        <ul>
-            <li><a href="rihanna_musicoftheson.html">Music of the Sun (2005)</a></li>
-            <li><a href="rihanna_girllikeme.html">A Girl Like Me (2006)</a></li>
-            <li><a href="rihanna_goodgirlgonebad.html">Good Girl Gone Bad (2007)</a></li>
-        </ul>
+        <div class="artist-info">
+            <h2>Rihanna</h2>
+            <ul>
+                <li><a href="rihanna_musicoftheson.html">Music of the Sun (2005)</a></li>
+                <li><a href="rihanna_girllikeme.html">A Girl Like Me (2006)</a></li>
+                <li><a href="rihanna_goodgirlgonebad.html">Good Girl Gone Bad (2007)</a></li>
+            </ul>
+        </div>
+        <div class="artist-image">
+            <img src="https://cdn.britannica.com/83/211883-050-46933F1A/Rihanna-Barbadian-singer-Robyn-Fenty.jpg" alt="Rihanna">
+        </div>
     </section>
 
 </body>
