--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <section class="artist" id="beyonce">
         <div class="artist-info">
             <h2>Beyoncé</h2>
+            <p>Beyoncé Giselle Knowles-Carter is an American singer, songwriter, and actress. Born and raised in Houston, Texas, Beyoncé performed in various singing and dancing competitions as a child. She rose to fame in the late 1990s as the lead singer of Destiny's Child, one of the best-selling girl groups of all time.</p>
             <ul>
                 <li><a href="beyonce_dangerously.html">Dangerously in Love (2003)</a></li>
                 <li><a href="beyonce_bday.html">B'Day (2006)</a></li>
@@ -33,6 +34,7 @@
     <section class="artist" id="taylorswift">
         <div class="artist-info">
             <h2>Taylor Swift</h2>
+            <p>Taylor Alison Swift is an American singer-songwriter. She is known for narrative songs about her personal life, which have received widespread media coverage. At age 14, Swift became the youngest artist signed by the Sony/ATV Music publishing house and, at age 15, she signed her first record deal.</p>
             <ul>
                 <li><a href="taylorswift_debut.html">Taylor Swift (2006)</a></li>
                 <li><a href="taylorswift_fearless.html">Fearless (2008)</a></li>
@@ -47,6 +49,7 @@
     <section class="artist" id="halsey">
         <div class="artist-info">
             <h2>Halsey</h2>
+            <p>Ashley Nicolette Frangipane, known professionally as Halsey, is an American singer, songwriter, and activist. Gaining attention from self-released music on social media platforms, she was signed by Astralwerks in 2014 and released her debut EP, Room 93, later that year.</p>
             <ul>
                 <li><a href="halsey_badlands.html">Badlands (2015)</a></li>
                 <li><a href="halsey_hopeless.html">Hopeless Fountain Kingdom (2017)</a></li>
@@ -61,6 +64,7 @@
     <section class="artist" id="rihanna">
         <div class="artist-info">
             <h2>Rihanna</h2>
+            <p>Robyn Rihanna Fenty is a Barbadian singer, actress, fashion designer, and businesswoman. She is known for embracing various musical styles and reinventing her image throughout her career. Rihanna is one of the best-selling music artists, with over 250 million records sold worldwide.</p>
             <ul>
                 <li><a href="rihanna_musicoftheson.html">Music of the Sun (2005)</a></li>
                 <li><a href="rihanna_girllikeme.html">A Girl Like Me (2006)</a></li>
