--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         </ul>
     </nav>
 
+    <h1>Artist Discography</h1>
+
     <section class="artist" id="beyonce">
         <div class="artist-info">
             <h2>Beyoncé</h2>
@@ -25,12 +27,14 @@
                 <li><a href="beyonce_bday.html">B'Day (2006)</a></li>
                 <li><a href="beyonce_sashafierce.html">I Am... Sasha Fierce (2008)</a></li>
             </ul>
+            <a href="https://www.beyonce.com/" class="btn" target="_blank">Official Website</a>
         </div>
         <div class="artist-image">
             <img src="https://assets.vogue.in/photos/6465dc1e13d0fd2111a35fdc/2:3/w_2560%2Cc_limit/GettyImages-1458274580-3.jpg" alt="Beyoncé">
         </div>
     </section>
 
+    <!-- Repeat the same structure for other artists -->
     <section class="artist" id="taylorswift">
         <div class="artist-info">
             <h2>Taylor Swift</h2>
@@ -40,12 +44,13 @@
                 <li><a href="taylorswift_fearless.html">Fearless (2008)</a></li>
                 <li><a href="taylorswift_speaknow.html">Speak Now (2010)</a></li>
             </ul>
+            <a href="https://www.taylorswift.com/" class="btn" target="_blank">Official Website</a>
         </div>
         <div class="artist-image">
             <img src="https://m.media-amazon.com/images/M/MV5BZGM0YjhkZmEtNGYxYy00OTk0LThlNDgtNGQzM2YwNjU0NDQzXkEyXkFqcGdeQXVyMTU3ODQxNDYz._V1_.jpg" alt="Taylor Swift">
         </div>
     </section>
-
+    
     <section class="artist" id="halsey">
         <div class="artist-info">
             <h2>Halsey</h2>
@@ -55,12 +60,13 @@
                 <li><a href="halsey_hopeless.html">Hopeless Fountain Kingdom (2017)</a></li>
                 <li><a href="halsey_manic.html">Manic (2020)</a></li>
             </ul>
+            <a href="https://www.iamhalsey.com/" class="btn" target="_blank">Official Website</a>
         </div>
         <div class="artist-image">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Halsey_September_2019.jpg/800px-Halsey_September_2019.jpg" alt="Halsey">
         </div>
     </section>
-
+    
     <section class="artist" id="rihanna">
         <div class="artist-info">
             <h2>Rihanna</h2>
@@ -70,11 +76,16 @@
                 <li><a href="rihanna_girllikeme.html">A Girl Like Me (2006)</a></li>
                 <li><a href="rihanna_goodgirlgonebad.html">Good Girl Gone Bad (2007)</a></li>
             </ul>
+            <a href="https://www.rihannanow.com/" class="btn" target="_blank">Official Website</a>
         </div>
         <div class="artist-image">
             <img src="https://cdn.britannica.com/83/211883-050-46933F1A/Rihanna-Barbadian-singer-Robyn-Fenty.jpg" alt="Rihanna">
         </div>
     </section>
 
+    <footer>
+        <p>This is a website I designed to understand the basics of HTML and CSS. It lists my favorite artists and their discography. Each album links to separate pages (which are under construction). The navigation bar links to different sections of this page.</p>
+        <a href="mailto:samyuktapathak1131@gmail.com" class="btn" target="_blank">Contact Me</a>
+    </footer>
 </body>
 </html>
