--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Artist Discography</h1>
-    
+    <h1 style="text-align: center;">Artist Discography</h1>
+
     <nav>
         <ul>
             <li><a href="#beyonce">Beyoncé</a></li>
@@ -67,7 +67,7 @@
             </ul>
             <a href="https://www.iamhalsey.com/" class="btn" target="_blank">Official Website</a>
         </div>
-        <div class="artist-image">
+        <div class ="artist-image">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Halsey_September_2019.jpg/800px-Halsey_September_2019.jpg" alt="Halsey">
         </div>
     </section>
