--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style="text-align: center;">Artist Discography</h1>
+
+    <div style="margin-bottom: 20px;"></div>
+
+    <h1 style="text-align: center;">Artist Discography</h1> <!-- Center align the heading -->
 
     <nav>
         <ul>
