--- a/index.html
+++ b/index.html
@@ -28,13 +28,21 @@
     <section class="artist" id="beyonce">
         <div class="artist-info">
             <h2>Beyoncé</h2>
+            <h3>Personal Information</h3> <!-- Subheading for personal information -->
             <p>Beyoncé Giselle Knowles-Carter is an American singer, songwriter, and actress. Born and raised in Houston, Texas, Beyoncé performed in various singing and dancing competitions as a child. She rose to fame in the late 1990s as the lead singer of Destiny's Child, one of the best-selling girl groups of all time.</p>
+            <h3>Albums</h3> <!-- Subheading for albums -->
             <ul>
                 <li><a href="beyonce_dangerously.html">Dangerously in Love (2003)</a></li>
                 <li><a href="beyonce_bday.html">B'Day (2006)</a></li>
                 <li><a href="beyonce_sashafierce.html">I Am... Sasha Fierce (2008)</a></li>
             </ul>
-            <a href="https://www.beyonce.com/" class="btn" target="_blank">Official Website</a>
+            <h3>Accolades</h3> <!-- Subheading for accolades -->
+            <ul>
+                <li>Grammy Awards: 28 wins, 79 nominations</li>
+                <li>MTV Video Music Awards: 24 wins, 66 nominations</li>
+                <!-- Add more accolades if needed -->
+            </ul>
+            <a href="https://www.beyonce.com/" class="btn btn-official" target="_blank">Official Website</a> <!-- Add btn-official class for official website button -->
         </div>
         <div class="artist-image">
             <img src="https://assets.vogue.in/photos/6465dc1e13d0fd2111a35fdc/2:3/w_2560%2Cc_limit/GettyImages-1458274580-3.jpg" alt="Beyoncé">
@@ -45,57 +53,81 @@
     <section class="artist" id="taylorswift">
         <div class="artist-info">
             <h2>Taylor Swift</h2>
+            <h3>Personal Information</h3>
             <p>Taylor Alison Swift is an American singer-songwriter. She is known for narrative songs about her personal life, which have received widespread media coverage. At age 14, Swift became the youngest artist signed by the Sony/ATV Music publishing house and, at age 15, she signed her first record deal.</p>
+            <h3>Albums</h3>
             <ul>
                 <li><a href="taylorswift_debut.html">Taylor Swift (2006)</a></li>
                 <li><a href="taylorswift_fearless.html">Fearless (2008)</a></li>
                 <li><a href="taylorswift_speaknow.html">Speak Now (2010)</a></li>
             </ul>
-            <a href="https://www.taylorswift.com/" class="btn" target="_blank">Official Website</a>
+            <h3>Accolades</h3>
+            <ul>
+                <li>Grammy Awards: 11 wins, 41 nominations</li>
+                <li>American Music Awards: 32 wins, 47 nominations</li>
+                <!-- Add more accolades if needed -->
+            </ul>
+            <a href="https://www.taylorswift.com/" class="btn btn-official" target="_blank">Official Website</a>
         </div>
         <div class="artist-image">
-            <img src="https://m.media-amazon.com/images/M/MV5BZGM0YjhkZmEtNGYxYy00OTk0LThlNDgtNGQzM2YwNjU0NDQzXkEyXkFqcGdeQXVyMTU3ODQxNDYz._V1_.jpg" alt="Taylor Swift">
+            <img src="https://m.media-amazon.com/images/M/MV5BZGM0YjhkZmEtNGYxYy00OTk0LThlNDgtNGQzM2YwNjU0NDQzXkEyXkFqcGdeQXVyMTU3ODQxNDYz.V1.jpg" alt="Taylor Swift">
         </div>
     </section>
 
     <!-- Halsey Section -->
-    <section class="artist" id="halsey">
-        <div class="artist-info">
-            <h2>Halsey</h2>
-            <p>Ashley Nicolette Frangipane, known professionally as Halsey, is an American singer, songwriter, and activist. Gaining attention from self-released music on social media platforms, she was signed by Astralwerks in 2014 and released her debut EP, Room 93, later that year.</p>
-            <ul>
-                <li><a href="halsey_badlands.html">Badlands (2015)</a></li>
-                <li><a href="halsey_hopeless.html">Hopeless Fountain Kingdom (2017)</a></li>
-                <li><a href="halsey_manic.html">Manic (2020)</a></li>
-            </ul>
-            <a href="https://www.iamhalsey.com/" class="btn" target="_blank">Official Website</a>
-        </div>
-        <div class ="artist-image">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Halsey_September_2019.jpg/800px-Halsey_September_2019.jpg" alt="Halsey">
-        </div>
-    </section>
+<section class="artist" id="halsey">
+    <div class="artist-info">
+        <h2>Halsey</h2>
+        <h3>Personal Information</h3>
+        <p>Ashley Nicolette Frangipane, known professionally as Halsey, is an American singer, songwriter, and activist. Gaining attention from self-released music on social media platforms, she was signed by Astralwerks in 2014 and released her debut EP, Room 93, later that year.</p>
+        <h3>Albums</h3>
+        <ul>
+            <li><a href="halsey_badlands.html">Badlands (2015)</a></li>
+            <li><a href="halsey_hopeless.html">Hopeless Fountain Kingdom (2017)</a></li>
+            <li><a href="halsey_manic.html">Manic (2020)</a></li>
+        </ul>
+        <h3>Accolades</h3>
+        <ul>
+            <li>MTV Video Music Awards: 1 win, 12 nominations</li>
+            <li>Billboard Music Awards: 3 wins, 8 nominations</li>
+            <!-- Add more accolades if needed -->
+        </ul>
+        <a href="https://www.iamhalsey.com/" class="btn btn-official" target="_blank">Official Website</a>
+    </div>
+    <div class="artist-image">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Halsey_September_2019.jpg/800px-Halsey_September_2019.jpg" alt="Halsey">
+    </div>
+</section>
 
-    <!-- Rihanna Section -->
-    <section class="artist" id="rihanna">
-        <div class="artist-info">
-            <h2>Rihanna</h2>
-            <p>Robyn Rihanna Fenty is a Barbadian singer, actress, fashion designer, and businesswoman. She is known for embracing various musical styles and reinventing her image throughout her career. Rihanna is one of the best-selling music artists, with over 250 million records sold worldwide.</p>
-            <ul>
-                <li><a href="rihanna_musicoftheson.html">Music of the Sun (2005)</a></li>
-                <li><a href="rihanna_girllikeme.html">A Girl Like Me (2006)</a></li>
-                <li><a href="rihanna_goodgirlgonebad.html">Good Girl Gone Bad (2007)</a></li>
-            </ul>
-            <a href="https://www.rihannanow.com/" class="btn" target="_blank">Official Website</a>
-        </div>
-        <div class="artist-image">
-            <img src="https://cdn.britannica.com/83/211883-050-46933F1A/Rihanna-Barbadian-singer-Robyn-Fenty.jpg" alt="Rihanna">
-        </div>
-    </section>
+<!-- Rihanna Section -->
+<section class="artist" id="rihanna">
+    <div class="artist-info">
+        <h2>Rihanna</h2>
+        <h3>Personal Information</h3>
+        <p>Robyn Rihanna Fenty is a Barbadian singer, actress, fashion designer, and businesswoman. She is known for embracing various musical styles and reinventing her image throughout her career. Rihanna is one of the best-selling music artists, with over 250 million records sold worldwide.</p>
+        <h3>Albums</h3>
+        <ul>
+            <li><a href="rihanna_musicoftheson.html">Music of the Sun (2005)</a></li>
+            <li><a href="rihanna_girllikeme.html">A Girl Like Me (2006)</a></li>
+            <li><a href="rihanna_goodgirlgonebad.html">Good Girl Gone Bad (2007)</a></li>
+        </ul>
+        <h3>Accolades</h3>
+        <ul>
+            <li>Grammy Awards: 9 wins, 33 nominations</li>
+            <li>MTV Video Music Awards: 4 wins, 24 nominations</li>
+            <!-- Add more accolades if needed -->
+        </ul>
+        <a href="https://www.rihannanow.com/" class="btn btn-official" target="_blank">Official Website</a>
+    </div>
+    <div class="artist-image">
+        <img src="https://cdn.britannica.com/83/211883-050-46933F1A/Rihanna-Barbadian-singer-Robyn-Fenty.jpg" alt="Rihanna">
+    </div>
+</section>
 
 
-    <footer>
-        <p>This is a website I designed to understand the basics of HTML and CSS. It lists my favorite artists and their discography. Each album links to separate pages (which are under construction). The navigation bar links to different sections of this page.</p>
-        <a href="mailto:samyuktapathak1131@gmail.com" class="btn" target="_blank">Contact Me</a>
-    </footer>
+<footer>
+    <p>This is a website I designed to understand the basics of HTML and CSS. It lists my favorite artists and their discography. Each album links to separate pages (which are under construction). The navigation bar links to different sections of this page.</p>
+    <a href="mailto:samyuktapathak1131@gmail.com" class="btn btn-contact" target="_blank">Contact Me</a> <!-- Add btn-contact class for contact me button -->
+</footer>
 </body>
 </html>
