--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
 
     <nav>
         <ul>
-            <li><a href="#beyonce">Beyoncé</a>
+            <li><a href="#">Beyoncé</a>
                 <ul class="dropdown">
                     <li><a href="#beyonce-info">Personal Info</a></li>
                     <li><a href="#beyonce-albums">Albums</a></li>
                     <li><a href="#beyonce-accolades">Accolades</a></li>
                 </ul>
             </li>
-            <li><a href="#taylorswift">Taylor Swift</a>
+            <li><a href="#">Taylor Swift</a>
                 <ul class="dropdown">
                     <li><a href="#taylorswift-info">Personal Info</a></li>
                     <li><a href="#taylorswift-albums">Albums</a></li>
                     <li><a href="#taylorswift-accolades">Accolades</a></li>
                 </ul>
             </li>
-            <li><a href="#halsey">Halsey</a>
+            <li><a href="#">Halsey</a>
                 <ul class="dropdown">
                     <li><a href="#halsey-info">Personal Info</a></li>
                     <li><a href="#halsey-albums">Albums</a></li>
                     <li><a href="#halsey-accolades">Accolades</a></li>
                 </ul>
             </li>
-            <li><a href="#rihanna">Rihanna</a>
+            <li><a href="#">Rihanna</a>
                 <ul class="dropdown">
                     <li><a href="#rihanna-info">Personal Info</a></li>
                     <li><a href="#rihanna-albums">Albums</a></li>
@@ -149,10 +149,10 @@
     </div>
 </section>
 
-
 <footer>
     <p>This is a website I designed to understand the basics of HTML and CSS. It lists my favorite artists and their discography. Each album links to separate pages (which are under construction). The navigation bar links to different sections of this page.</p>
     <a href="mailto:samyuktapathak1131@gmail.com" class="btn btn-contact" target="_blank">Contact Me</a> <!-- Add btn-contact class for contact me button -->
 </footer>
 </body>
 </html>
+
