--- a/index.html
+++ b/index.html
@@ -14,38 +14,14 @@
 
     <nav>
         <ul>
-            <li><a href="#">Beyoncé</a>
-                <ul class="dropdown">
-                    <li><a href="#beyonce-info">Personal Info</a></li>
-                    <li><a href="#beyonce-albums">Albums</a></li>
-                    <li><a href="#beyonce-accolades">Accolades</a></li>
-                </ul>
-            </li>
-            <li><a href="#">Taylor Swift</a>
-                <ul class="dropdown">
-                    <li><a href="#taylorswift-info">Personal Info</a></li>
-                    <li><a href="#taylorswift-albums">Albums</a></li>
-                    <li><a href="#taylorswift-accolades">Accolades</a></li>
-                </ul>
-            </li>
-            <li><a href="#">Halsey</a>
-                <ul class="dropdown">
-                    <li><a href="#halsey-info">Personal Info</a></li>
-                    <li><a href="#halsey-albums">Albums</a></li>
-                    <li><a href="#halsey-accolades">Accolades</a></li>
-                </ul>
-            </li>
-            <li><a href="#">Rihanna</a>
-                <ul class="dropdown">
-                    <li><a href="#rihanna-info">Personal Info</a></li>
-                    <li><a href="#rihanna-albums">Albums</a></li>
-                    <li><a href="#rihanna-accolades">Accolades</a></li>
-                </ul>
-            </li>
+            <li><a href="#beyonce">Beyoncé</a></li>
+            <li><a href="#taylorswift">Taylor Swift</a></li>
+            <li><a href="#halsey">Halsey</a></li>
+            <li><a href="#rihanna">Rihanna</a></li>
         </ul>
     </nav>
-    
 
+    
     <!-- Add some space after the navigation bar -->
     <div style="margin-bottom: 40px;"></div>
 
