--- a/index.html
+++ b/index.html
@@ -124,9 +124,13 @@
             <img src="https://cdn.britannica.com/83/211883-050-46933F1A/Rihanna-Barbadian-singer-Robyn-Fenty.jpg" alt="Rihanna">
         </div>
     </section>
+    
     <footer>
         <p>This is a website I designed to understand the basics of HTML and CSS. It lists my favorite artists and their discography. Each album links to separate pages (which are under construction). The navigation bar links to different sections of this page.</p>
-        <a href="mailto:samyuktapathak1131@gmail.com" class="btn btn-contact" target="_blank">Contact Me</a> <!-- Add btn-contact class for contact me button -->
+        <div class="contact-btn-container">
+            <a href="mailto:samyuktapathak1131@gmail.com" class="btn btn-contact" target="_blank">Contact Me</a> <!-- Add btn-contact class for contact me button -->
+        </div>
     </footer>
+    
 </body>
 </html>
